step13/session_affinity/session-test.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: session-deployment
spec:
  replicas: 10
  template:
    metadata:
      labels:
        app: session
    spec:
      containers:
        - image: 'maho/session-test:1.1'
          name: session
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: session-svc
spec:
  selector:
    app: session
  ports:
    - port: 9080
      targetPort: 80
